src/lexer.c

#line 1 "src/lexer.rl"
/** Zed A. Shaw -- A weird assembler.  Copyright 2008.  */

#include "module.h"
#include "grammar.h"
#include "tokenize.h"
#include "grammar.c"
#include "ops.h"
#include "error.h"
#include "allocator.h"


#line 187 "src/lexer.rl"



#line 19 "src/lexer.c"
static const int lexer_start = 12;
static const int lexer_error = 0;

static const int lexer_en_c_comment = 10;
static const int lexer_en_main = 12;


#line 190 "src/lexer.rl"

int Module_compile(Module *state, CORD source)
{
	int cs, act;
	const char *ts = 0, *te = 0;
    void *pParser = ParseAlloc(Allocator_malloc);
    Token *tk = NULL;
    const char *p = CORD_to_const_char_star(source);

	
#line 38 "src/lexer.c"
	{
	cs = lexer_start;
	ts = 0;
	te = 0;
	act = 0;
	}

#line 200 "src/lexer.rl"

    const char *pe = p+CORD_len(source);
    const char *eof = pe;

    
#line 52 "src/lexer.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr2:
#line 172 "src/lexer.rl"
	{te = p+1;{ STR() }}
	goto st12;
tr5:
#line 14 "src/lexer.rl"
	{state->curline++; SYM(EOL)}
#line 178 "src/lexer.rl"
	{te = p+1;}
	goto st12;
tr8:
#line 168 "src/lexer.rl"
	{te = p+1;{ CHR() }}
	goto st12;
tr12:
#line 182 "src/lexer.rl"
	{{p = ((te))-1;}{ INT() }}
	goto st12;
tr14:
#line 179 "src/lexer.rl"
	{te = p+1;{ {goto st10;} }}
	goto st12;
tr20:
#line 175 "src/lexer.rl"
	{te = p+1;}
	goto st12;
tr21:
#line 14 "src/lexer.rl"
	{state->curline++; SYM(EOL)}
#line 175 "src/lexer.rl"
	{te = p+1;}
	goto st12;
tr22:
#line 31 "src/lexer.rl"
	{te = p+1;{ SYM(PERCENT) }}
	goto st12;
tr23:
#line 26 "src/lexer.rl"
	{te = p+1;{ SYM(LPAREN) }}
	goto st12;
tr24:
#line 27 "src/lexer.rl"
	{te = p+1;{ SYM(RPAREN) }}
	goto st12;
tr25:
#line 28 "src/lexer.rl"
	{te = p+1;{ SYM(COMMA) }}
	goto st12;
tr27:
#line 25 "src/lexer.rl"
	{te = p+1;{ SYM(DOT) }}
	goto st12;
tr30:
#line 29 "src/lexer.rl"
	{te = p+1;{ SYM(COLON) }}
	goto st12;
tr31:
#line 32 "src/lexer.rl"
	{te = p+1;{ SYM(EOL) }}
	goto st12;
tr32:
#line 30 "src/lexer.rl"
	{te = p+1;{ SYM(EQ) }}
	goto st12;
tr38:
#line 33 "src/lexer.rl"
	{te = p+1;{ SYM(LBRACK) }}
	goto st12;
tr39:
#line 34 "src/lexer.rl"
	{te = p+1;{ SYM(RBRACK) }}
	goto st12;
tr60:
#line 182 "src/lexer.rl"
	{te = p;p--;{ INT() }}
	goto st12;
tr62:
#line 183 "src/lexer.rl"
	{te = p;p--;{ FLOAT() }}
	goto st12;
tr64:
#line 184 "src/lexer.rl"
	{te = p;p--;{ HEX() }}
	goto st12;
tr65:
#line 1 "src/lexer.rl"
	{	switch( act ) {
	case 11:
	{{p = ((te))-1;} KW(FUNCTION) }
	break;
	case 12:
	{{p = ((te))-1;} KW(END) }
	break;
	case 13:
	{{p = ((te))-1;}REG(NOREG) }
	break;
	case 14:
	{{p = ((te))-1;}REG(R0) }
	break;
	case 15:
	{{p = ((te))-1;}REG(R1) }
	break;
	case 16:
	{{p = ((te))-1;}REG(R2) }
	break;
	case 17:
	{{p = ((te))-1;}REG(V0) }
	break;
	case 18:
	{{p = ((te))-1;}REG(V1) }
	break;
	case 19:
	{{p = ((te))-1;}REG(V2) }
	break;
	case 20:
	{{p = ((te))-1;}REG(FP) }
	break;
	case 21:
	{{p = ((te))-1;} REG(RET) }
	break;
	case 22:
	{{p = ((te))-1;} TYPE(i) }
	break;
	case 23:
	{{p = ((te))-1;} TYPE(ui) }
	break;
	case 24:
	{{p = ((te))-1;} TYPE(l) }
	break;
	case 25:
	{{p = ((te))-1;} TYPE(ul) }
	break;
	case 26:
	{{p = ((te))-1;} TYPE(p) }
	break;
	case 27:
	{{p = ((te))-1;} TYPE(f) }
	break;
	case 28:
	{{p = ((te))-1;} TYPE(d) }
	break;
	case 29:
	{{p = ((te))-1;} TYPE(v) }
	break;
	case 30:
	{{p = ((te))-1;} TYPE(c) }
	break;
	case 31:
	{{p = ((te))-1;} TYPE(uc) }
	break;
	case 32:
	{{p = ((te))-1;} TYPE(s) }
	break;
	case 33:
	{{p = ((te))-1;} TYPE(us) }
	break;
	case 34:
	{{p = ((te))-1;}OP(addr) }
	break;
	case 35:
	{{p = ((te))-1;}OP(addi) }
	break;
	case 36:
	{{p = ((te))-1;}OP(addxr) }
	break;
	case 37:
	{{p = ((te))-1;}OP(addxi) }
	break;
	case 38:
	{{p = ((te))-1;}OP(addcr) }
	break;
	case 39:
	{{p = ((te))-1;}OP(addci) }
	break;
	case 40:
	{{p = ((te))-1;}OP(subr) }
	break;
	case 41:
	{{p = ((te))-1;}OP(subi) }
	break;
	case 42:
	{{p = ((te))-1;}OP(subxr) }
	break;
	case 43:
	{{p = ((te))-1;}OP(subxi) }
	break;
	case 44:
	{{p = ((te))-1;}OP(subcr) }
	break;
	case 45:
	{{p = ((te))-1;}OP(subci) }
	break;
	case 46:
	{{p = ((te))-1;}OP(rsbr) }
	break;
	case 47:
	{{p = ((te))-1;}OP(rsbi) }
	break;
	case 48:
	{{p = ((te))-1;}OP(mulr) }
	break;
	case 49:
	{{p = ((te))-1;}OP(muli) }
	break;
	case 50:
	{{p = ((te))-1;}OP(hmulr) }
	break;
	case 51:
	{{p = ((te))-1;}OP(hmuli) }
	break;
	case 52:
	{{p = ((te))-1;}OP(divr) }
	break;
	case 53:
	{{p = ((te))-1;}OP(divi) }
	break;
	case 54:
	{{p = ((te))-1;}OP(modr) }
	break;
	case 55:
	{{p = ((te))-1;}OP(modi) }
	break;
	case 56:
	{{p = ((te))-1;}OP(andr) }
	break;
	case 57:
	{{p = ((te))-1;}OP(andi) }
	break;
	case 58:
	{{p = ((te))-1;}OP(orr) }
	break;
	case 59:
	{{p = ((te))-1;}OP(ori) }
	break;
	case 60:
	{{p = ((te))-1;}OP(xorr) }
	break;
	case 61:
	{{p = ((te))-1;}OP(xori) }
	break;
	case 62:
	{{p = ((te))-1;}OP(lshr) }
	break;
	case 63:
	{{p = ((te))-1;}OP(lshi) }
	break;
	case 64:
	{{p = ((te))-1;}OP(rshr) }
	break;
	case 65:
	{{p = ((te))-1;}OP(rshi) }
	break;
	case 66:
	{{p = ((te))-1;}OP(negr) }
	break;
	case 67:
	{{p = ((te))-1;}OP(notr) }
	break;
	case 68:
	{{p = ((te))-1;}OP(ltr) }
	break;
	case 69:
	{{p = ((te))-1;}OP(lti) }
	break;
	case 70:
	{{p = ((te))-1;}OP(ler) }
	break;
	case 71:
	{{p = ((te))-1;}OP(lei) }
	break;
	case 72:
	{{p = ((te))-1;}OP(gtr) }
	break;
	case 73:
	{{p = ((te))-1;}OP(gti) }
	break;
	case 74:
	{{p = ((te))-1;}OP(ger) }
	break;
	case 75:
	{{p = ((te))-1;}OP(gei) }
	break;
	case 76:
	{{p = ((te))-1;}OP(eqr) }
	break;
	case 77:
	{{p = ((te))-1;}OP(eqi) }
	break;
	case 78:
	{{p = ((te))-1;}OP(ner) }
	break;
	case 79:
	{{p = ((te))-1;}OP(nei) }
	break;
	case 80:
	{{p = ((te))-1;}OP(unltr) }
	break;
	case 81:
	{{p = ((te))-1;}OP(unler) }
	break;
	case 82:
	{{p = ((te))-1;}OP(ungtr) }
	break;
	case 83:
	{{p = ((te))-1;}OP(unger) }
	break;
	case 84:
	{{p = ((te))-1;}OP(uneqr) }
	break;
	case 85:
	{{p = ((te))-1;}OP(ltgtr) }
	break;
	case 86:
	{{p = ((te))-1;}OP(ordr) }
	break;
	case 87:
	{{p = ((te))-1;}OP(unordr) }
	break;
	case 88:
	{{p = ((te))-1;}OP(movr) }
	break;
	case 89:
	{{p = ((te))-1;}OP(movi) }
	break;
	case 90:
	{{p = ((te))-1;}OP(hton) }
	break;
	case 91:
	{{p = ((te))-1;}OP(ntoh) }
	break;
	case 92:
	{{p = ((te))-1;}OP(ldr) }
	break;
	case 93:
	{{p = ((te))-1;}OP(ldi) }
	break;
	case 94:
	{{p = ((te))-1;}OP(ldxr) }
	break;
	case 95:
	{{p = ((te))-1;}OP(ldxi) }
	break;
	case 96:
	{{p = ((te))-1;}OP(str) }
	break;
	case 97:
	{{p = ((te))-1;}OP(sti) }
	break;
	case 98:
	{{p = ((te))-1;}OP(stxr) }
	break;
	case 99:
	{{p = ((te))-1;}OP(stxi) }
	break;
	case 100:
	{{p = ((te))-1;}OP(prepare) }
	break;
	case 101:
	{{p = ((te))-1;}OP(pusharg) }
	break;
	case 102:
	{{p = ((te))-1;}OP(getarg) }
	break;
	case 103:
	{{p = ((te))-1;}OP(retval) }
	break;
	case 104:
	{{p = ((te))-1;}OP(blti) }
	break;
	case 105:
	{{p = ((te))-1;}OP(blei) }
	break;
	case 106:
	{{p = ((te))-1;}OP(bgti) }
	break;
	case 107:
	{{p = ((te))-1;}OP(bgei) }
	break;
	case 108:
	{{p = ((te))-1;}OP(beqi) }
	break;
	case 109:
	{{p = ((te))-1;}OP(bnei) }
	break;
	case 110:
	{{p = ((te))-1;}OP(bmsi) }
	break;
	case 111:
	{{p = ((te))-1;}OP(bmci) }
	break;
	case 112:
	{{p = ((te))-1;}OP(jmpi) }
	break;
	case 113:
	{{p = ((te))-1;}OP(jmpr) }
	break;
	case 115:
	{{p = ((te))-1;} OP(size_of) }
	break;
	case 116:
	{{p = ((te))-1;} OP(alloc) }
	break;
	case 117:
	{{p = ((te))-1;} OP(realloc) }
	break;
	case 118:
	{{p = ((te))-1;} OP(free) }
	break;
	case 119:
	{{p = ((te))-1;} OP(collect) }
	break;
	case 120:
	{{p = ((te))-1;} OP(calli); NO_LEAF(calli); }
	break;
	case 121:
	{{p = ((te))-1;}OP(callr); NO_LEAF(callr); }
	break;
	case 123:
	{{p = ((te))-1;}OP(finishr); NO_LEAF(finishr); }
	break;
	case 124:
	{{p = ((te))-1;} IDENT() }
	break;
	}
	}
	goto st12;
tr66:
#line 164 "src/lexer.rl"
	{te = p+1;{ LABEL() }}
	goto st12;
tr67:
#line 163 "src/lexer.rl"
	{te = p;p--;{ IDENT() }}
	goto st12;
tr124:
#line 60 "src/lexer.rl"
	{te = p;p--;{ TYPE(c) }}
	goto st12;
tr139:
#line 58 "src/lexer.rl"
	{te = p;p--;{ TYPE(d) }}
	goto st12;
tr154:
#line 57 "src/lexer.rl"
	{te = p;p--;{ TYPE(f) }}
	goto st12;
tr163:
#line 159 "src/lexer.rl"
	{te = p;p--;{OP(finish); NO_LEAF(finish); }}
	goto st12;
tr194:
#line 52 "src/lexer.rl"
	{te = p;p--;{ TYPE(i) }}
	goto st12;
tr201:
#line 54 "src/lexer.rl"
	{te = p;p--;{ TYPE(l) }}
	goto st12;
tr251:
#line 56 "src/lexer.rl"
	{te = p;p--;{ TYPE(p) }}
	goto st12;
tr274:
#line 146 "src/lexer.rl"
	{te = p;p--;{OP(ret) }}
	goto st12;
tr284:
#line 62 "src/lexer.rl"
	{te = p;p--;{ TYPE(s) }}
	goto st12;
tr315:
#line 61 "src/lexer.rl"
	{te = p;p--;{ TYPE(uc) }}
	goto st12;
tr319:
#line 53 "src/lexer.rl"
	{te = p;p--;{ TYPE(ui) }}
	goto st12;
tr322:
#line 55 "src/lexer.rl"
	{te = p;p--;{ TYPE(ul) }}
	goto st12;
tr343:
#line 63 "src/lexer.rl"
	{te = p;p--;{ TYPE(us) }}
	goto st12;
tr348:
#line 59 "src/lexer.rl"
	{te = p;p--;{ TYPE(v) }}
	goto st12;
st12:
#line 1 "src/lexer.rl"
	{ts = 0;}
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 1 "src/lexer.rl"
	{ts = p;}
#line 556 "src/lexer.c"
	switch( (*p) ) {
		case 10: goto tr21;
		case 34: goto st1;
		case 35: goto st3;
		case 37: goto tr22;
		case 39: goto st4;
		case 40: goto tr23;
		case 41: goto tr24;
		case 44: goto tr25;
		case 45: goto st6;
		case 46: goto tr27;
		case 47: goto st8;
		case 48: goto tr29;
		case 58: goto tr30;
		case 59: goto tr31;
		case 61: goto tr32;
		case 70: goto st18;
		case 78: goto st19;
		case 82: goto st23;
		case 86: goto st25;
		case 91: goto tr38;
		case 92: goto st0;
		case 93: goto tr39;
		case 94: goto st0;
		case 96: goto st0;
		case 97: goto st26;
		case 98: goto st40;
		case 99: goto st54;
		case 100: goto st65;
		case 101: goto st72;
		case 102: goto st75;
		case 103: goto st92;
		case 104: goto st98;
		case 105: goto st104;
		case 106: goto st106;
		case 108: goto st109;
		case 109: goto st120;
		case 110: goto st126;
		case 111: goto st133;
		case 112: goto st136;
		case 114: goto st148;
		case 115: goto st160;
		case 117: goto st174;
		case 118: goto st199;
		case 120: goto st202;
	}
	if ( (*p) < 60 ) {
		if ( (*p) > 43 ) {
			if ( 49 <= (*p) && (*p) <= 57 )
				goto tr10;
		} else if ( (*p) >= 33 )
			goto st0;
	} else if ( (*p) > 64 ) {
		if ( (*p) > 122 ) {
			if ( 123 <= (*p) && (*p) <= 126 )
				goto st0;
		} else if ( (*p) >= 65 )
			goto tr33;
	} else
		goto st0;
	goto tr20;
st0:
cs = 0;
	goto _out;
tr1:
#line 14 "src/lexer.rl"
	{state->curline++; SYM(EOL)}
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 629 "src/lexer.c"
	switch( (*p) ) {
		case 10: goto tr1;
		case 34: goto tr2;
		case 92: goto st2;
	}
	goto st1;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) == 10 )
		goto tr1;
	goto st1;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 10 )
		goto tr5;
	goto st3;
tr7:
#line 14 "src/lexer.rl"
	{state->curline++; SYM(EOL)}
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 658 "src/lexer.c"
	switch( (*p) ) {
		case 10: goto tr7;
		case 39: goto tr8;
		case 92: goto st5;
	}
	goto st4;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 10 )
		goto tr7;
	goto st4;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr10;
	goto st0;
tr10:
#line 1 "src/lexer.rl"
	{te = p+1;}
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 687 "src/lexer.c"
	if ( (*p) == 46 )
		goto st7;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr10;
	goto tr60;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st14;
	goto tr12;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st14;
	goto tr62;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 42 )
		goto tr14;
	goto st0;
tr29:
#line 1 "src/lexer.rl"
	{te = p+1;}
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 722 "src/lexer.c"
	switch( (*p) ) {
		case 46: goto st7;
		case 120: goto st9;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr10;
	goto tr60;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st16;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st16;
	} else
		goto st16;
	goto tr12;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st16;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st16;
	} else
		goto st16;
	goto tr64;
tr33:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 163 "src/lexer.rl"
	{act = 124;}
	goto st17;
tr68:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 48 "src/lexer.rl"
	{act = 20;}
	goto st17;
tr72:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 41 "src/lexer.rl"
	{act = 13;}
	goto st17;
tr73:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 42 "src/lexer.rl"
	{act = 14;}
	goto st17;
tr74:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 43 "src/lexer.rl"
	{act = 15;}
	goto st17;
tr75:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 44 "src/lexer.rl"
	{act = 16;}
	goto st17;
tr77:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 49 "src/lexer.rl"
	{act = 21;}
	goto st17;
tr78:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 45 "src/lexer.rl"
	{act = 17;}
	goto st17;
tr79:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 46 "src/lexer.rl"
	{act = 18;}
	goto st17;
tr80:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 47 "src/lexer.rl"
	{act = 19;}
	goto st17;
tr86:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 67 "src/lexer.rl"
	{act = 35;}
	goto st17;
tr87:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 66 "src/lexer.rl"
	{act = 34;}
	goto st17;
tr92:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 71 "src/lexer.rl"
	{act = 39;}
	goto st17;
tr94:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 70 "src/lexer.rl"
	{act = 38;}
	goto st17;
tr95:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 69 "src/lexer.rl"
	{act = 37;}
	goto st17;
tr96:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 68 "src/lexer.rl"
	{act = 36;}
	goto st17;
tr99:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 150 "src/lexer.rl"
	{act = 116;}
	goto st17;
tr101:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 89 "src/lexer.rl"
	{act = 57;}
	goto st17;
tr102:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 88 "src/lexer.rl"
	{act = 56;}
	goto st17;
tr109:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 140 "src/lexer.rl"
	{act = 108;}
	goto st17;
tr112:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 139 "src/lexer.rl"
	{act = 107;}
	goto st17;
tr113:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 138 "src/lexer.rl"
	{act = 106;}
	goto st17;
tr116:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 137 "src/lexer.rl"
	{act = 105;}
	goto st17;
tr117:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 136 "src/lexer.rl"
	{act = 104;}
	goto st17;
tr120:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 143 "src/lexer.rl"
	{act = 111;}
	goto st17;
tr121:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 142 "src/lexer.rl"
	{act = 110;}
	goto st17;
tr123:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 141 "src/lexer.rl"
	{act = 109;}
	goto st17;
tr130:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 157 "src/lexer.rl"
	{act = 120;}
	goto st17;
tr131:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 158 "src/lexer.rl"
	{act = 121;}
	goto st17;
tr133:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 60 "src/lexer.rl"
	{act = 30;}
	goto st17;
tr138:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 153 "src/lexer.rl"
	{act = 119;}
	goto st17;
tr143:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 85 "src/lexer.rl"
	{act = 53;}
	goto st17;
tr144:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 84 "src/lexer.rl"
	{act = 52;}
	goto st17;
tr148:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 58 "src/lexer.rl"
	{act = 28;}
	goto st17;
tr151:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 38 "src/lexer.rl"
	{act = 12;}
	goto st17;
tr152:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 109 "src/lexer.rl"
	{act = 77;}
	goto st17;
tr153:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 108 "src/lexer.rl"
	{act = 76;}
	goto st17;
tr164:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 160 "src/lexer.rl"
	{act = 123;}
	goto st17;
tr167:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 57 "src/lexer.rl"
	{act = 27;}
	goto st17;
tr169:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 152 "src/lexer.rl"
	{act = 118;}
	goto st17;
tr175:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 37 "src/lexer.rl"
	{act = 11;}
	goto st17;
tr178:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 107 "src/lexer.rl"
	{act = 75;}
	goto st17;
tr179:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 106 "src/lexer.rl"
	{act = 74;}
	goto st17;
tr183:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 134 "src/lexer.rl"
	{act = 102;}
	goto st17;
tr184:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 105 "src/lexer.rl"
	{act = 73;}
	goto st17;
tr185:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 104 "src/lexer.rl"
	{act = 72;}
	goto st17;
tr190:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 83 "src/lexer.rl"
	{act = 51;}
	goto st17;
tr191:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 82 "src/lexer.rl"
	{act = 50;}
	goto st17;
tr193:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 122 "src/lexer.rl"
	{act = 90;}
	goto st17;
tr196:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 52 "src/lexer.rl"
	{act = 22;}
	goto st17;
tr199:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 144 "src/lexer.rl"
	{act = 112;}
	goto st17;
tr200:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 145 "src/lexer.rl"
	{act = 113;}
	goto st17;
tr207:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 125 "src/lexer.rl"
	{act = 93;}
	goto st17;
tr208:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 124 "src/lexer.rl"
	{act = 92;}
	goto st17;
tr210:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 127 "src/lexer.rl"
	{act = 95;}
	goto st17;
tr211:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 126 "src/lexer.rl"
	{act = 94;}
	goto st17;
tr212:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 103 "src/lexer.rl"
	{act = 71;}
	goto st17;
tr213:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 102 "src/lexer.rl"
	{act = 70;}
	goto st17;
tr215:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 54 "src/lexer.rl"
	{act = 24;}
	goto st17;
tr217:
#line 1 "src/lexer.rl"
	{te = p+1;}
